Fixed spacing of headers and images on screen

--- a/styles.scss
+++ b/styles.scss
@@ -3,7 +3,7 @@
 }
 
 body {
-  background-color: whitesmoke;
+  background-color: white;
   margin: 0;
   padding: 0;
 }
@@ -30,23 +30,29 @@ section#home,
 section#about {
   display: flex;
   flex-direction: row;
+  justify-content: center;
   align-items: center;
-  justify-content: space-between;
+  flex-wrap: wrap;
   width: 100vw;
   padding: 5px 30px;
+  gap: 20px;
 }
 
 .intro,
 .description {
-  flex: 1;
+  flex: 1 1 200px;
   padding: 20px;
+  max-width: 600px;
 }
 
 .image1,
 .image2 {
   display: flex;
   justify-content: center;
-  flex: 1;
+  align-items: center;
+  flex: 1 1 200px;
+  max-width: 700px;
+  margin: 10px;
 
   img {
     width: 90%;
